syntax = "proto3";


option java_multiple_files = true;
option java_package = "io.rpc.testwa.push";
option java_outer_classname = "PushProto";
option objc_class_prefix = "PUSH";

package push;


service Push {
    //注册到基于protoBuf格式的推送服务
    rpc registerToServer (ClientInfo) returns (stream Message) {}

    //订阅某些主题,阻塞调用
    rpc subscribe (TopicInfo) returns (Status) {}

    //取消订阅某些主题,阻塞调用
    rpc cancel (TopicInfo) returns (Status){}

    //从服务注销,阻塞调用
    rpc logoutFromServer (ClientInfo) returns (Status) {}
}


message ClientInfo {
	string deviceId = 1;
}

message Status {
	string status = 1;
}

//订阅信息
message TopicInfo {
	ClientInfo clientInfo = 1;
	string topicName = 2;
}

//以ProtoBuf为通用格式返回数据
message Message {
	string topicName = 1;
	string status = 2;
	bytes message = 3;
}